network-poc/authorization.yaml
apiVersion: v1
kind: Service
metadata:
    name: authorization
    labels:
        app: authorization
spec:
    ports:
    - port: 8000
      targetPort: 8000
    type: NodePort
    selector:
        app: authorization
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
    name: authorization
spec:
    replicas: 2
    selector:
      matchLabels:
        app: authorization
    template:
        metadata:
          labels:
            app: authorization
            tier: authorization
        spec:
            containers:
            - name: authorization
              image: eamonwoortman/alpine-python-curl-zip
              command: ["python"]
              args: ["./server.py"]
              workingDir: /server
              ports:
              - containerPort: 8000
              volumeMounts:
              - mountPath: /server
                name: wrapper
            volumes:
            - name: wrapper
              configMap:
                name: wrapper
