network-poc/edge.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: edge
spec:
  type: NodePort
  ports: 
  - port: 80
    targetPort: 80
  selector:
    app: edge
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: edge
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: edge
        tier: edge
    spec:
      containers:
        - name: nginx
          image: rstarmer/nginx-curl
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d
      volumes:
      - name: config-volume
        configMap:
          name: nginx-config
