network-poc/data-pipeline.yaml
apiVersion: v1
kind: Service
metadata:
    name: data-pipeline
    labels:
        app: data-pipeline
spec:
    ports:
    - port: 80
      targetPort: 80
    type: NodePort
    selector:
        app: data-pipeline
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
    name: data-pipeline
spec:
    replicas: 2
    selector:
      matchLabels:
        app: data-pipeline
    template:
        metadata:
          labels:
            app: data-pipeline
            tier: service
        spec:
            containers:
            - name: data-pipeline
              image: eamonwoortman/alpine-python-curl-zip
              command: ["python"]
              args: ["./server.py"]
              workingDir: /server
              ports:
              - containerPort: 80
              volumeMounts:
              - mountPath: /server
                name: nfs-share
            volumes:
            - name: nfs-share
              hostPath:
                path: /opt/kdata
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata: 
  name: data-pipeline
  annotations: 
    kubernetes.io/ingress.class: traefik
  labels:
    ingress-tier: service
spec:
  rules:
  - http: 
      paths:
      - path: /api/data-pipeline
        backend: 
          serviceName: data-pipeline
          servicePort: 80
